[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
gcollections = "1.5.0"
grid = "0.9.0"
intervallum = "1.4.0"
itertools = "0.10.5"
num = "0.4.0"
regex = "1.7.0"
vector2d = "2.2.0"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3

#[profile.test]
#opt-level = 3